feat: add ansible playbook;

--- a/Hyprland/.config/waybar/style.css
+++ b/Hyprland/.config/waybar/style.css
@@ -37,7 +37,8 @@ window#waybar.hidden {
 }
 
 #workspaces button.active {
-  color: #6a92d7;
+  /* color: #6a92d7; */
+  color: #f9e2af;
 }
 
 #workspaces button.urgent {
